--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8"> 
+  <meta name="anypay-verification" content="da9b7b838f661f4bc9e5d5b81277">
   <title>Курс: Стать Богом</title>
   <style>
     body {
