--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
-  <meta charset="UTF-8"> 
+  <meta charset="UTF-8">
   <meta name="anypay-verification" content="da9b7b838f661f4bc9e5d5b81277">
   <title>Курс: Стать Богом</title>
   <style>
@@ -11,13 +11,17 @@
       background: #f9f9f9;
       color: #333;
     }
-    .box {
-      max-width: 600px;
+    .container {
+      max-width: 700px;
       margin: auto;
       background: white;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+    }
+    h1 {
+      font-size: 28px;
+      margin-bottom: 20px;
     }
     .btn {
       display: inline-block;
@@ -28,14 +32,44 @@
       text-decoration: none;
       border-radius: 5px;
     }
+    .section {
+      margin-top: 30px;
+    }
+    .section h2 {
+      font-size: 20px;
+      margin-bottom: 10px;
+    }
+    .contact-info p {
+      margin: 5px 0;
+    }
   </style>
 </head>
 <body>
-  <div class="box">
-    <h1>Закрытый канал: СТАТЬ БОГОМ</h1>
-    <p>Приватный Telegram-канал для тех, кто хочет чувствовать себя на 100% и добиваться всего. Подписка: 1000₽ в месяц.</p>
-    <p>После оплаты вы получите доступ через Telegram-бота.</p>
-    <a class="btn" href="https://t.me/ТВОЙ_БОТ">Оплатить</a>
+  <div class="container">
+    <h1>Программа «СТАТЬ БОГОМ»</h1>
+    <p>Это приватный Telegram-канал для тех, кто хочет раскрыть свой потенциал, достичь ментального и физического превосходства, научиться самодисциплине и добиваться целей без компромиссов.</p>
+    
+    <div class="section">
+      <h2>Что входит в подписку:</h2>
+      <ul>
+        <li>Ежедневные практики и рекомендации по саморазвитию</li>
+        <li>Авторские методики и наставления</li>
+        <li>Разборы успешных стратегий мышления</li>
+        <li>Закрытые прямые эфиры и сессии вопросов-ответов</li>
+      </ul>
+      <p><strong>Стоимость: 1000₽ в месяц</strong></p>
+      <p>После оплаты вы получите доступ к закрытому каналу через Telegram-бота.</p>
+      <a class="btn" href="https://t.me/ТВОЙ_БОТ">Перейти к оплате</a>
+    </div>
+
+    <div class="section contact-info">
+      <h2>Контакты</h2>
+      <p><strong>Email:</strong> support@stbogom.ru</p>
+      <p><strong>Telegram:</strong> <a href="https://t.me/BulletMagnat" target="_blank">@ТВОЙ_АККАУНТ</a></p>
+      <p><strong>Instagram:</strong> <a href="https://instagram.com/BulletMagnat" target="_blank">@ТВОЙ_ИНСТА</a></p>
+      <p><strong>Форма обратной связи:</strong> <a href="https://forms.gle/HVdmht9ERLHtYqTc8" target="_blank">Оставить сообщение</a></p>
+    </div>
   </div>
 </body>
 </html>
+
