--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 
     <div class="section contact-info">
       <h2>Контакты</h2>
-      <p><strong>Email:</strong> support@stbogom.ru</p>
-      <p><strong>Telegram:</strong> <a href="https://t.me/BulletMagnat" target="_blank">@ТВОЙ_АККАУНТ</a></p>
-      <p><strong>Instagram:</strong> <a href="https://instagram.com/BulletMagnat" target="_blank">@ТВОЙ_ИНСТА</a></p>
+      <p><strong>Email:</strong> kirovoleg92@gmail.com</p>
+      <p><strong>Telegram:</strong> <a href="https://t.me/BulletMagnat" target="_blank">@BulletMagnat</a></p>
+      <p><strong>Instagram:</strong> <a href="https://instagram.com/BulletMagnat" target="_blank">@BulletMagnat</a></p>
       <p><strong>Форма обратной связи:</strong> <a href="https://forms.gle/HVdmht9ERLHtYqTc8" target="_blank">Оставить сообщение</a></p>
     </div>
   </div>
