--- a/index.html
+++ b/index.html
@@ -2,74 +2,86 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <meta name="anypay-verification" content="da9b7b838f661f4bc9e5d5b81277">
-  <title>Курс: Стать Богом</title>
+  <title>Программа развития «Потенциал»</title>
   <style>
     body {
-      font-family: sans-serif;
-      padding: 40px;
-      background: #f9f9f9;
-      color: #333;
+      font-family: Arial, sans-serif;
+      background: #f5f5f5;
+      padding: 20px;
+      color: #222;
     }
     .container {
-      max-width: 700px;
+      max-width: 650px;
       margin: auto;
-      background: white;
+      background: #fff;
       padding: 30px;
       border-radius: 10px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+      box-shadow: 0 0 20px rgba(0,0,0,0.05);
     }
     h1 {
       font-size: 28px;
-      margin-bottom: 20px;
+      margin-bottom: 10px;
     }
-    .btn {
+    ul {
+      margin-top: 10px;
+    }
+    .price {
+      font-weight: bold;
+      margin: 20px 0;
+      font-size: 18px;
+    }
+    .button {
       display: inline-block;
-      margin-top: 20px;
-      padding: 12px 24px;
+      padding: 12px 20px;
       background: black;
       color: white;
       text-decoration: none;
       border-radius: 5px;
+      margin-bottom: 25px;
     }
-    .section {
-      margin-top: 30px;
+    .contacts {
+      font-size: 14px;
     }
-    .section h2 {
-      font-size: 20px;
-      margin-bottom: 10px;
+    .contacts a {
+      color: #0077cc;
+      text-decoration: none;
     }
-    .contact-info p {
-      margin: 5px 0;
+    .small-note {
+      font-size: 12px;
+      color: #777;
+      margin-top: 15px;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>Программа «СТАТЬ БОГОМ»</h1>
-    <p>Это приватный Telegram-канал для тех, кто хочет раскрыть свой потенциал, достичь ментального и физического превосходства, научиться самодисциплине и добиваться целей без компромиссов.</p>
+    <h1>Программа развития «Потенциал»</h1>
+    <p>Приватный Telegram-канал для тех, кто хочет развить личную эффективность, прокачать дисциплину, улучшить физическую форму и мышление.</p>
     
-    <div class="section">
-      <h2>Что входит в подписку:</h2>
-      <ul>
-        <li>Ежедневные практики и рекомендации по саморазвитию</li>
-        <li>Авторские методики и наставления</li>
-        <li>Разборы успешных стратегий мышления</li>
-        <li>Закрытые прямые эфиры и сессии вопросов-ответов</li>
-      </ul>
-      <p><strong>Стоимость: 1000₽ в месяц</strong></p>
-      <p>После оплаты вы получите доступ к закрытому каналу через Telegram-бота.</p>
-      <a class="btn" href="https://t.me/ТВОЙ_БОТ">Перейти к оплате</a>
+    <h3>Что входит в подписку:</h3>
+    <ul>
+      <li>Ежедневные рекомендации по самосовершенствованию</li>
+      <li>Авторские методики и практики</li>
+      <li>Разборы продуктивного мышления</li>
+      <li>Закрытые эфиры и ответы на вопросы участников</li>
+    </ul>
+
+    <p class="price">Стоимость: 1000₽ в месяц</p>
+    <a href="ССЫЛКА_НА_ОПЛАТУ" class="button">Перейти к оплате</a>
+
+    <p class="small-note">После оплаты вы получите доступ к закрытому Telegram-каналу через бота.</p>
+
+    <div class="contacts">
+      <p><strong>Контакты:</strong><br>
+      Email: <a href="mailto:kirovoleg92@gmail.com">kirovoleg92@gmail.com</a><br>
+      Telegram: <a href="https://t.me/BulletMagnat" target="_blank">@BulletMagnat</a><br>
+      Instagram: <a href="https://instagram.com/BulletMagnat" target="_blank">@BulletMagnat</a><br>
+      Обратная связь: <a href="ССЫЛКА_НА_ФОРМУ">Оставить сообщение</a></p>
     </div>
 
-    <div class="section contact-info">
-      <h2>Контакты</h2>
-      <p><strong>Email:</strong> kirovoleg92@gmail.com</p>
-      <p><strong>Telegram:</strong> <a href="https://t.me/BulletMagnat" target="_blank">@BulletMagnat</a></p>
-      <p><strong>Instagram:</strong> <a href="https://instagram.com/BulletMagnat" target="_blank">@BulletMagnat</a></p>
-      <p><strong>Форма обратной связи:</strong> <a href="https://forms.gle/HVdmht9ERLHtYqTc8" target="_blank">Оставить сообщение</a></p>
+    <div class="small-note">
+      *Настоящая программа не является медицинским или психологическим лечением. Результаты индивидуальны и не гарантированы.
     </div>
   </div>
 </body>
 </html>
-
