--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
+  <meta name="morune" content="8c043896" />
   <title>Программа развития «Потенциал»</title>
   <style>
     body {
